<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>hu.tempus</groupId>
	<artifactId>DocBuilder</artifactId>
	<packaging>jar</packaging>
	<version>1.0</version>
	<name>DocBuilder</name>
	<url>http://maven.apache.org</url>
	<properties>
		<maven.compiler.release>11</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.1</version>
				<configuration>
					<filters>
						<filter>
							<artifact>*.*</artifact>
							<excludes>
								<exclude>**/module-info.class</exclude>
								<exclude>META-INF/MANIFEST.MF</exclude>
							</excludes>
						</filter>
					</filters>
					<transformers>
						<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
							<manifestEntries>
								<Main-Class>hu.tempus.DocBuilder.DocBuilder</Main-Class>
							</manifestEntries>
						</transformer>
					</transformers>
					<outputFile>${project.basedir}/DocBuilder.jar</outputFile>
					<createDependencyReducedPom>false</createDependencyReducedPom>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<directory>resources</directory>
			</resource>
		</resources>
	</build>

	<dependencies>

		<dependency>
			<groupId>org.glassfish</groupId>
			<artifactId>javax.json</artifactId>
			<version>1.1.4</version>
		</dependency>

		<dependency>
			<groupId>com.sun.net.httpserver</groupId>
			<artifactId>http</artifactId>
			<version>20070405</version>
		</dependency>

		<dependency>
			<groupId>org.java-websocket</groupId>
			<artifactId>Java-WebSocket</artifactId>
			<version>1.6.0</version>
		</dependency>

	</dependencies>
</project>